--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="swift_bic_title">BIC</string>
 
     <!-- Credit Card Screen -->
-    <string name="credit_card_title">Кредитная карта:</string>
+    <string name="credit_card_title">Кредитная карта</string>
     <string name="credit_card_number">Номер карты</string>
     <string name="credit_card_expiry_date">Срок действия</string>
     <string name="credit_card_type">Тип карты</string>
